--- a/css/nour.css
+++ b/css/nour.css
@@ -18,6 +18,7 @@
 }
 
 .header .ul>li {
+  padding: 0px 10px;
   margin-bottom: 20px;
   position: relative;
 }
@@ -68,7 +69,7 @@ a.click {
 }
 
 .header .ul .ul-1 {
-  padding: 20px 10px;
+  padding-right: 50px;
   position: absolute;
   right: 200px;
   top: -100px;
