--- a/css/general_section.css
+++ b/css/general_section.css
@@ -54,7 +54,8 @@ section li{
   z-index: 1;
 }
 #hadith1::after{
-  content: 'أنَّ أعْرَابِيًّا جَاءَ إلى رَسولِ اللَّهِ صَلَّى اللهُ عليه وسلَّمَ ثَائِرَ الرَّأْسِ، فَقالَ: يا رَسولَ اللَّهِ أخْبِرْنِي مَاذَا فَرَضَ اللَّهُ عَلَيَّ مِنَ الصَّلَاةِ؟ فَقالَ: الصَّلَوَاتِ الخَمْسَ إلَّا أنْ تَطَّوَّعَ شيئًا، فَقالَ: أخْبِرْنِي ما فَرَضَ اللَّهُ عَلَيَّ مِنَ الصِّيَامِ؟ فَقالَ: شَهْرَ رَمَضَانَ إلَّا أنْ تَطَّوَّعَ شيئًا، فَقالَ: أخْبِرْنِي بما فَرَضَ اللَّهُ عَلَيَّ مِنَ الزَّكَاةِ؟ فَقالَ: فأخْبَرَهُ رَسولُ اللَّهِ صَلَّى اللهُ عليه وسلَّمَ شَرَائِعَ الإسْلَامِ، قالَ: والذي أكْرَمَكَ، لا أتَطَوَّعُ شيئًا، ولَا أنْقُصُ ممَّا فَرَضَ اللَّهُ عَلَيَّ شيئًا، فَقالَ رَسولُ اللَّهِ صَلَّى اللهُ عليه وسلَّمَ أفْلَحَ إنْ صَدَقَ، أوْ دَخَلَ الجَنَّةَ إنْ صَدَقَ.';
+  content: 'أنَّ أعْرَابِيًّا جَاءَ إلى رَسولِ اللَّهِ صَلَّى اللهُ عليه وسلَّمَ ثَائِرَ الرَّأْسِ، فَقالَ: يا رَسولَ اللَّهِ أخْبِرْنِي مَاذَا فَرَضَ اللَّهُ عَلَيَّ مِنَ الصَّلَاةِ؟ فَقالَ: الصَّلَوَاتِ الخَمْسَ إلَّا أنْ تَطَّوَّعَ شيئًا، فَقالَ: أخْبِرْنِي ما فَرَضَ اللَّهُ عَلَيَّ مِنَ الصِّيَامِ؟ فَقالَ: شَهْرَ رَمَضَانَ إلَّا أنْ تَطَّوَّعَ شيئًا، فَقالَ: أخْبِرْنِي بما فَرَضَ اللَّهُ عَلَيَّ مِنَ الزَّكَاةِ؟ فَقالَ: فأخْبَرَهُ رَسولُ اللَّهِ صَلَّى اللهُ عليه وسلَّمَ شَرَائِعَ الإسْلَامِ، قالَ: والذي أكْرَمَكَ، لا أتَطَوَّعُ شيئًا، ولَا أنْقُصُ ممَّا فَرَضَ اللَّهُ عَلَيَّ شيئًا، فَقالَ رَسولُ اللَّهِ صَلَّى اللهُ عليه وسلَّمَ أفْلَحَ إنْ صَدَقَ، أوْ دَخَلَ الجَنَّةَ إنْ صَدَقَ.' ;
+  white-space: pre-wrap;
   width: 60vw;
   height: fit-content;
   background-color: #fff;
