--- a/css/general_section.css
+++ b/css/general_section.css
@@ -83,7 +83,8 @@ section li{
   z-index: 1;
 }
 #hadith2::after{
-  content: 'نُهِينا أنْ نَسْأَلَ رَسولَ اللهِ صَلَّى اللَّهُ عليه وسلَّمَ عن شيءٍ، فَكانَ يُعْجِبُنا أنْ يَجِيءَ الرَّجُلُ مِن أهْلِ البادِيَةِ العاقِلُ، فَيَسْأَلَهُ، ونَحْنُ نَسْمَعُ، فَجاءَ رَجُلٌ مِن أهْلِ البادِيَةِ، فقالَ: يا مُحَمَّدُ، أتانا رَسولُكَ فَزَعَمَ لنا أنَّكَ تَزْعُمُ أنَّ اللَّهَ أرْسَلَكَ، قالَ: صَدَقَ، قالَ: فمَن خَلَقَ السَّماءَ؟ قالَ: اللَّهُ، قالَ: فمَن خَلَقَ الأرْضَ؟ قالَ: اللَّهُ، قالَ: فمَن نَصَبَ هذِه الجِبالَ، وجَعَلَ فيها ما جَعَلَ؟ قالَ: اللَّهُ، قالَ: فَبِالَّذِي خَلَقَ السَّماءَ، وخَلَقَ الأرْضَ، ونَصَبَ هذِه الجِبالَ، آللَّهُ أرْسَلَكَ؟ قالَ: نَعَمْ، قالَ: وزَعَمَ رَسولُكَ أنَّ عليْنا خَمْسَ صَلَواتٍ في يَومِنا، ولَيْلَتِنا، قالَ: صَدَقَ، قالَ: فَبِالَّذِي أرْسَلَكَ، آللَّهُ أمَرَكَ بهذا؟ قالَ: نَعَمْ، قالَ: وزَعَمَ رَسولُكَ أنَّ عليْنا زَكاةً في أمْوالِنا، قالَ: صَدَقَ، قالَ: فَبِالَّذِي أرْسَلَكَ، آللَّهُ أمَرَكَ بهذا؟ قالَ: نَعَمْ، قالَ: وزَعَمَ رَسولُكَ أنَّ عليْنا صَوْمَ شَهْرِ رَمَضانَ في سَنَتِنا، قالَ: صَدَقَ، قالَ: فَبِالَّذِي أرْسَلَكَ، آللَّهُ أمَرَكَ بهذا؟ قالَ: نَعَمْ، قالَ: وزَعَمَ رَسولُكَ أنَّ عليْنا حَجَّ البَيْتِ مَنِ اسْتَطاعَ إلَيْهِ سَبِيلًا، قالَ: صَدَقَ، قالَ: ثُمَّ ولَّى، قالَ: والذي بَعَثَكَ بالحَقِّ، لا أزِيدُ عليهنَّ، ولا أنْقُصُ منهنَّ، فقالَ النبيُّ صَلَّى اللَّهُ عليه وسلَّمَ: لَئِنْ صَدَقَ لَيَدْخُلَنَّ الجَنَّةَ.';
+  content: '
+نُهِينا أنْ نَسْأَلَ رَسولَ اللهِ صَلَّى اللَّهُ عليه وسلَّمَ عن شيءٍ، فَكانَ يُعْجِبُنا أنْ يَجِيءَ الرَّجُلُ مِن أهْلِ البادِيَةِ العاقِلُ، فَيَسْأَلَهُ، ونَحْنُ نَسْمَعُ، فَجاءَ رَجُلٌ مِن أهْلِ البادِيَةِ، فقالَ: يا مُحَمَّدُ، أتانا رَسولُكَ فَزَعَمَ لنا أنَّكَ تَزْعُمُ أنَّ اللَّهَ أرْسَلَكَ، قالَ: صَدَقَ، قالَ: فمَن خَلَقَ السَّماءَ؟ قالَ: اللَّهُ، قالَ: فمَن خَلَقَ الأرْضَ؟ قالَ: اللَّهُ، قالَ: فمَن نَصَبَ هذِه الجِبالَ، وجَعَلَ فيها ما جَعَلَ؟ قالَ: اللَّهُ، قالَ: فَبِالَّذِي خَلَقَ السَّماءَ، وخَلَقَ الأرْضَ، ونَصَبَ هذِه الجِبالَ، آللَّهُ أرْسَلَكَ؟ قالَ: نَعَمْ، قالَ: وزَعَمَ رَسولُكَ أنَّ عليْنا خَمْسَ صَلَواتٍ في يَومِنا، ولَيْلَتِنا، قالَ: صَدَقَ، قالَ: فَبِالَّذِي أرْسَلَكَ، آللَّهُ أمَرَكَ بهذا؟ قالَ: نَعَمْ، قالَ: وزَعَمَ رَسولُكَ أنَّ عليْنا زَكاةً في أمْوالِنا، قالَ: صَدَقَ، قالَ: فَبِالَّذِي أرْسَلَكَ، آللَّهُ أمَرَكَ بهذا؟ قالَ: نَعَمْ، قالَ: وزَعَمَ رَسولُكَ أنَّ عليْنا صَوْمَ شَهْرِ رَمَضانَ في سَنَتِنا، قالَ: صَدَقَ، قالَ: فَبِالَّذِي أرْسَلَكَ، آللَّهُ أمَرَكَ بهذا؟ قالَ: نَعَمْ، قالَ: وزَعَمَ رَسولُكَ أنَّ عليْنا حَجَّ البَيْتِ مَنِ اسْتَطاعَ إلَيْهِ سَبِيلًا، قالَ: صَدَقَ، قالَ: ثُمَّ ولَّى، قالَ: والذي بَعَثَكَ بالحَقِّ، لا أزِيدُ عليهنَّ، ولا أنْقُصُ منهنَّ، فقالَ النبيُّ صَلَّى اللَّهُ عليه وسلَّمَ: لَئِنْ صَدَقَ لَيَدْخُلَنَّ الجَنَّةَ.';
   width: 60vw;
   height: fit-content;
   background-color: #fff;
@@ -152,7 +153,34 @@ section li{
   display: none;
   z-index: 1;
 }
-
+#hadith5:hover::after, #hadith5:hover::before{
+  display: block;
+}
+#hadith5::before{
+  content: '';
+  position: absolute;
+  top: 10px;
+  left: 0px;
+  border-width: 15px;
+  border-style: solid;
+  border-color: transparent transparent #fff transparent;
+  display: none;
+  z-index: 1;
+}
+#hadith5::after{
+  content: 'سَأَلْنَا جَابِرَ بنَ عبدِ اللَّهِ عَنِ الصَّلَاةِ في الثَّوْبِ الوَاحِدِ، فَقَالَ: خَرَجْتُ مع النبيِّ صَلَّى اللهُ عليه وسلَّمَ في بَعْضِ أسْفَارِهِ، فَجِئْتُ لَيْلَةً لِبَعْضِ أمْرِي، فَوَجَدْتُهُ يُصَلِّي، وعَلَيَّ ثَوْبٌ واحِدٌ، فَاشْتَمَلْتُ به وصَلَّيْتُ إلى جَانِبِهِ، فَلَمَّا انْصَرَفَ قَالَ: ما السُّرَى يا جَابِرُ فأخْبَرْتُهُ بحَاجَتِي، فَلَمَّا فَرَغْتُ قَالَ: ما هذا الِاشْتِمَالُ الذي رَأَيْتُ، قُلتُ: كانَ ثَوْبٌ - يَعْنِي ضَاقَ - قَالَ: فإنْ كانَ واسِعًا فَالْتَحِفْ به، وإنْ كانَ ضَيِّقًا فَاتَّزِرْ بهِ.';
+  width: 60vw;
+  height: fit-content;
+  background-color: #fff;
+  padding: 15px;
+  border-radius: 5px;
+  color: #000;
+  position: absolute;
+  top: 40px;
+  right: -5vw;
+  display: none;
+  z-index: 1;
+}
 span {
   color: rgb(47, 110, 112);
 }
