--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -1,5 +1,7 @@
-body{
-	 background-color:#eee;
+body {
+	background-image: url(../images/e169a2b7dc3a1ca15ac02b4a68232392.png);
+	font-family: 'Cairo', sans-serif;
+	margin: 0px;
 }
 .header{
 	width:100%;
