--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -21,7 +21,8 @@ body {
 	left: 50%;
 	top: 30%;
 	transform: translateX(-50%);
-	padding: 12px 20px;
+	padding: 30px 20px;
+	padding-top: 10px;
 }
 .con_btn{
 	position: absolute;
