--- a/css/vid_library.css
+++ b/css/vid_library.css
@@ -3,20 +3,28 @@ section{
   height: fit-content;
   padding-left: 65px;
   float: left;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-gap: 30px;
+  justify-content: center;
+  align-content: center;
 }
 section h1{
+  grid-column: span 3;
+  order: -1;
   color: #000;
   padding: 30px;
 }
 section div{
-  float: left;
+  width: 300px;
+  height: 300px;
   margin: 30px;
   background-color: #99f;
   border-radius: 20px;
 }
 section video{
-  width: 300px;
-  height: 300px;
+  width: 100%;
+  height: 93%;
 }
 h3{
   width: fit-content;
