--- a/css/header.css
+++ b/css/header.css
@@ -145,4 +145,7 @@ a.click {
   left: 5px;
   transform: scale(1.1);
   background-image: linear-gradient(to right, rgba(177, 252, 255, 0.603), rgba(255, 173, 205, 0.548));
+  position: relative;
+  z-index:40000;
+  opacity: 1;
 }
