--- a/css/vid_library.css
+++ b/css/vid_library.css
@@ -16,15 +16,19 @@ section h1{
   padding: 30px;
 }
 section div{
-  width: 300px;
-  height: 300px;
-  margin: 30px;
-  background-color: #99f;
-  border-radius: 20px;
+    width: 300px;
+    height: 300px;
+    margin: 30px;
+    background-color: #99f;
+    border-radius: 20px;
+    position: relative;
+    z-index: -3;
 }
 section video{
-  width: 100%;
-  height: 93%;
+    width: 100%;
+    height: 93%;
+    position: relative;
+    z-index: -300;
 }
 h3{
   width: fit-content;
