--- a/css/contact_us.css
+++ b/css/contact_us.css
@@ -81,3 +81,12 @@ section form [type="submit"]:hover{
     bottom: -8%;
   }
 }
+#saveds{
+  padding: 10px 60px;
+  background-color: #9f9;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: none;
+}
